# mimir

./: .air.toml  .gitignore  Dockerfile  Makefile  README.ko.md  README.md  config.example.json  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/mimir-mcp/: cli.go  main.go
docs/: API.md  TUTORIAL.md
examples/: README.md  claude-desktop-config.json
i18n/: en.json  ko.json
internal/analysis/: trends.go
internal/analyzer/: analyzer.go
internal/bootstrap/: bootstrap.go
internal/briefing/: audio.go  briefing.go
internal/category/: keywords.go
internal/classifier/: feeds.go
internal/config/: config.go  config_test.go
internal/curator/: auto_curate.go  tier_curator.go
internal/db/: db.go  feeds.go
internal/delivery/: delivery.go
internal/discovery/: academic.go  blog.go  crawl.go  crawler.go  discovery.go  github.go  gov.go  rss.go  rss_discoverer.go  seeds.go  youtube.go
internal/fetch/: ai_research.go  clinical_trials.go  content.go  energy.go  fda.go  fetch_test.go  finance.go  food.go  legal.go  politics.go  pubmed.go  research.go  rss_parser.go  sec.go  snippets.go  web.go  youtube.go
internal/health/: health.go  health_test.go
internal/hints/: architecture.go  hints.go  strategies.go
internal/httpclient/: client.go  client_test.go
internal/i18n/: i18n.go  i18n_test.go
internal/lang/: detect.go  detect_test.go
python/: LICENSE  README.md  pyproject.toml
python/mimir_mcp/: cli.py
python/mimir_vertical/: __init__.py
python/mimir_vertical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+25 files in other folders)
